[*] BO : general html and style update

--- a/views/css/ebay_back.css
+++ b/views/css/ebay_back.css
@@ -896,6 +896,7 @@ margin-bottom: 3px;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: contain;
+	vertical-align: middle;
 }
 
 #content .conf.info{
