returned the icon for .kb-help

--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -211,6 +211,7 @@
 
     .active {
       display: inline-block;
+      text-decoration: none !important;
 
       [class^="icon-"] {
         font-size: 16px;
