--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -163,6 +163,7 @@
 }
 .totebay .kb-help .active {
   display: inline-block;
+  text-decoration: none !important;
 }
 .totebay .kb-help .active [class^="icon-"] {
   font-size: 16px;
