--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -246,6 +246,7 @@
         height: 100%;
         background: #72c279;
         border-radius: 10px;
+        transition: width 0.5s ease-out;
       }
     }
   }
