--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -283,6 +283,7 @@
 
   .warning-message {
     margin-bottom: 0 !important;
+    margin-left: 10px;
     line-height: 1.3;
     color: darken(#fbbb22, 5%);
 
